<resources>
    <string name="app_name">ProjetAMIO</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="service_status">Service status:</string>
    <string name="last_results">Last results :</string>
    <string name="last_alert">Last Alert :</string>
    <string name="interogation_point">\?\?\?</string>
    <string name="Unknown">Unknown</string>
    <string name="off">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="yourname">Your name</string>
    <string name="username">username</string>
    <string name="provide_username">Please provide your username</string>
    <string name="power_description">indicate if the service was already turn on</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_light_subject">Detected movement</string>
    <string name="email_light_content">A new light is up</string>
    <string name="pp_title_enable_notification">Enable notification</string>
    <string name="pp_title_notification_begin">Hour where application send email notification</string>
    <string name="pp_email_begin">Hour where notification mechanism send email</string>
    <string name="pp_email_begin_desc">Hour where the notification system move to email</string>
    <string name="pp_email_end">Begin notification mechinism</string>
    <string name="pp_email_end_desc">Hour where notification mechanism change to push notification</string>
    <string name="pp_notification_group_title">Notification setting</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">Notification description</string>
    <string name="notification_title">Light on</string>
    <string name="notification_desc">One or more light as been turn on</string>
    <string name="pp_notification_begin">Hour begin send push notification</string>
    <string name="pp_notification_begin_desc">Hour where the application begin to send push notification to user</string>
    <string name="pp_email_group_title">Email Setting</string>
    <string name="pp_title_enable_email">Enable Email</string>
    <string name="pp_notification_end_desc">Hour where the application stop to send notification</string>
    <string name="pp_notification_end">Hour stop send notification</string>
    <string name="pp_email_begin_desc_weekend">Hour where notification mechanism send email</string>
    <string name="pp_email_begin_weekend">Hour where notification mechanism send email</string>
    <string name="pp_email_end_desc_weekend">Hour where notification mechanism stop send email</string>
    <string name="pp_email_end_weekend">Hour where notification mechanism stop send email</string>
    <string name="état" >State</string>
    <string name="on_off">On/Off</string>
    <string name="capteurs">Captors</string>
    <string name="tat_du_t_l_chargement">Download state</string>
    <string name="name">Data</string>
    <string name="RetourButtonNale">Return</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pp_email_config">Enter Email</string>
    <string name="pp_email_config_dec">Enter default email</string>
    <string name="pp_start_boot">Start at boot</string>
    <string name="pp_start_at_boot_desc" >Start reload data in background with smartphone boot</string>
    <string name="temperature">Temperature</string>
    <string name="humidite">Humidity</string>
    <string name="batterylabel">Battery</string>
    <string name="lastupdate">Last update</string>
    <string name="newer">Never</string>
    <string name="nextLabel">Closer mote</string>
    <string name="title_add_location">Allow location permission</string>
    <string name="text_add_location">We need your permission to allow this app locate the closet mote arround you</string>
</resources>