<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/username"
        android:summary="@string/provide_username"
        android:title="@string/yourname" />
    <PreferenceCategory android:title="@string/pp_notification_group_title">

        <SwitchPreference
            android:defaultValue="true"
            android:key="switch_preference_1"
            android:title="@string/pp_title_enable_notification" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="edit_text_preference_1"
            android:summary="@string/pp_email_begin_desc"
            android:title="@string/pp_email_begin" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:key="edit_text_preference_3"
            android:summary="@string/pp_email_begin_desc"
            android:title="@string/pp_email_end_desc" />
    </PreferenceCategory>
</PreferenceScreen>