<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="72dp"
    tools:context=".activity.FirstFragment">

    <TextView
        android:id="@+id/TV1"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/tat_du_t_l_chargement"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/imageDownloadStatus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/on_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/viewMoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/capteurs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/toggle" />

    <ImageView
        android:id="@+id/imageDownloadStatus"
        android:layout_width="183dp"
        android:layout_height="104dp"
        android:layout_marginTop="-4dp"
        android:contentDescription="@string/power_description"
        android:src="@drawable/power_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TV1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelLastUpdateMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/lastupdate"
        app:layout_constraintEnd_toStartOf="@+id/dataLastUpdateMA"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TV1" />

    <TextView
        android:id="@+id/dataLastUpdateMA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="84dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDownloadStatus" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/nextLabel"
        app:layout_constraintBottom_toTopOf="@+id/toggle"
        app:layout_constraintEnd_toStartOf="@+id/valueMoteSoon"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLastUpdateMA"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/valueMoteSoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataLastUpdateMA" />

</androidx.constraintlayout.widget.ConstraintLayout>